# run-it

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
docs/: linux-setup.md
nl2cmd/: README.md  go.mod  go.sum  main.go
nl2cmd/.genkit/runtimes/: 91954-2025-10-04T17_41_25Z.json  92213-2025-10-04T17_42_35Z.json
nl2cmd/.genkit/servers/: tools-92204.json
nl2cmd/.genkit/traces_idx/: idx_00001759599683910.json  idx_00001759599754994.json
nl2cmd/prompts/: nl2cmd.prompt
src/: backend.rs  main.rs  state.rs
